responsive edits and include logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="overlay"></div>
         <nav>
             <figure>
-              <img id="personal-logo" src="./assets/logo.svg" alt="">
+              <img id="personal-logo" src="./assets/logo (2).png" alt="Movies!">
             </figure>
             <ul class="nav__link--list">
               <li class="nav__link">
