default sort filter

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="filter-container">
         <span>Sort By: </span>
         <select name="" id="filter" onchange="renderMovies(event)">
-          <option value="" disabled selected>Sort</option>
+          <option value="" selected>Sort</option>
           <option value="RELASE_DATE_ASC">Oldest Release</option>
           <option value="RELASE_DATE_DSC">Latest Release</option>
           <option value="ALPHABETICAL">A - Z</option>
